attempted to fix edit post request

--- a/BoArtPaint/Views/Paintings/Index.cshtml
+++ b/BoArtPaint/Views/Paintings/Index.cshtml
@@ -44,7 +44,7 @@
                     {
                         data: "name",
                         render: function (data, type, painting) {
-                            return "<a href='/api/paintings/edit/" + painting.id + "'>" + painting.name + "</a>";
+                            return "<a href='/api/paintings/" + painting.id + "'>" + painting.name + "</a>";
                         }
                     },
                     {
