--- a/BoArtPaint/Views/Paintings/Details - ForNonAuthorizedUsers.cshtml
+++ b/BoArtPaint/Views/Paintings/Details - ForNonAuthorizedUsers.cshtml
@@ -5,9 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Details</h2>
 
-<div class="container">
+@*<div class="container">
     <div class="details-row">
         <div class="col-md-4 gallery">
             <img src="@Model.PaintUrl" class="details-img gallery-img" alt="Responsive image" >
@@ -16,6 +15,21 @@
             <h1>@Model.Name</h1>
             <h2>Artist: @Model.Artist.ArtistName</h2>
             <p>@Model.Description</p>
+            <p>@Model.Price</p>
+        </div>
+    </div>
+</div>*@
+
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-6">
+            <img src="@Model.PaintUrl" alt="@Model.Name" class="details-img gallery-img" alt="Responsive image">
+        </div>
+        <div class="col-md-6">
+            <h1>@Model.Name</h1>
+            <p class="lead">@Model.Description</p>
+            <h2 class = "lead"> Artist: @Model.Artist.ArtistName</h2>
+            <p class="font-weight-bold">Price: $@Model.Price</p>
         </div>
     </div>
 </div>
