--- a/BoArtPaint/Views/Paintings/Details - ForNonAuthorizedUsers.cshtml
+++ b/BoArtPaint/Views/Paintings/Details - ForNonAuthorizedUsers.cshtml
@@ -24,6 +24,7 @@
     <div class="row">
         <div class="col-md-6">
             <img src="@Model.PaintUrl" alt="@Model.Name" class="details-img gallery-img" alt="Responsive image">
+            <button> Like </button>    <button> Dislike </button>
         </div>
         <div class="col-md-6">
             <h1>@Model.Name</h1>
